unpackaged/main/default/objects/DDApi__GoCardless_Config__mdt/DDApi__GoCardless_Config__mdt.object-meta.xml
<CustomObject>
    <description>GoCardless Connection Configuration</description>
    <label>GoCardless Config</label>
    <pluralLabel>GoCardless Configs</pluralLabel>
</CustomObject>