unpackaged/main/default/objects/DDApi__GoCardless_Config__mdt/fields/DDApi__Accept_Header__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Accept_Header__c</fullName>
    <defaultValue>&#39;application/json&#39;</defaultValue>
    <description>GoCardless Accept Header</description>
    <inlineHelpText>GoCardless Accept Header</inlineHelpText>
    <label>Accept Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>