unpackaged/main/default/objects/DDApi__GoCardless_Config__mdt/fields/DDApi__Algorithm_Name__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Algorithm_Name__c</fullName>
    <description>Algorithm Name supported by GoCardless for Webhook Signature Validation</description>
    <inlineHelpText>Algorithm Name supported by GoCardless for Webhook Signature Validation</inlineHelpText>
    <label>Algorithm Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>