unpackaged/main/default/objects/DDApi__GoCardless_Config__mdt/fields/DDApi__Content_Type_Header__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Content_Type_Header__c</fullName>
    <defaultValue>&#39;application/json&#39;</defaultValue>
    <description>GoCardless Content-type Header</description>
    <inlineHelpText>GoCardless Content-type Header</inlineHelpText>
    <label>Content Type Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>