unpackaged/main/default/objects/DDApi__GoCardless_Config__mdt/fields/DDApi__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default GoCardless Connection Config</description>
    <inlineHelpText>Default GoCardless Connection Config</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>