unpackaged/main/default/objects/DDApi__GoCardless_Config__mdt/fields/DDApi__Version_Header__c.field-meta.xml
<CustomField>
    <fullName>DDApi__Version_Header__c</fullName>
    <defaultValue>&#39;2015-07-06&#39;</defaultValue>
    <description>GoCardless Version Header</description>
    <inlineHelpText>GoCardless Version Header</inlineHelpText>
    <label>Version Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>